--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -297,3 +297,8 @@
   text-transform: uppercase;
   margin-bottom: 5px;
 }
+// .swiper-pagination {
+//   top: -10px
+//   //bottom: 50px !important;
+//   //bottom: calc(env(safe-area-inset-bottom) + 20px) !important;
+//   }
