--- a/src/app/pages/product-detail/product-detail.page.scss
+++ b/src/app/pages/product-detail/product-detail.page.scss
@@ -28,3 +28,9 @@ p{
     --color: white;
     margin-top: 20px;
 }
+.product-image{
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 400px;
+}
