--- a/src/app/pages/clearance/clearance.page.html
+++ b/src/app/pages/clearance/clearance.page.html
@@ -22,19 +22,39 @@
     <ion-row>
       <ion-col *ngFor="let item of productList; let productIndex = index" size="4">
         <ion-card>
-          <div class="product-image" [ngStyle]="{'background-image':'url('+ img_dir + item.productImg +')'}" (click)="gotoDetail(item)">
-            <!-- <div class="card-center-bg"></div> -->
+          <!-- <div class="product-image" [ngStyle]="{'background-image':'url('+ img_dir + item.productImg +')'}" (click)="gotoDetail(item)">
+          </div> -->
+
+          <div *ngIf="item.image.length == 1" >
+            <div class="product-image"
+            [ngStyle]="{'background-image':'url('+ img_dir + item.image[0].name +')'}"
+            (click)="gotoDetail(item)">
+              <img src="../assets/imgs/sale.png" class="ribbon-img" />
+            </div>   
           </div>
+       
+          <ion-slides pager="true" [options]="slideOpts" mode="ios" *ngIf="item.image.length > 1">
+            <ion-slide *ngFor="let productImage of item.image; let i = index">
+              <div
+                class="product-image"
+                [ngStyle]="{'background-image':'url('+ img_dir + productImage.name +')'}"
+                (click)="gotoDetail(item)">
+                <img src="../assets/imgs/sale.png" class="ribbon-img" />
+ 
+            </div>
+            </ion-slide>
+          </ion-slides>
+
           <ion-card-content>
             <p><span class="product-name">{{item.productName}}</span></p>
             <div class="product-info-div">
               <div style="width: 60%;">
                 <p>{{item.productCode}}</p>
                 <p>{{item.productDimension}}</p>
-                <div class="bulk-div" *ngIf="item.productPriceSlab > 0 && item.productQtySlab > 0">Buy {{item.productQtySlab}} @ ${{item.productPriceSlab}}</div>
+                <div class="bulk-div" *ngIf="item.productPriceSlab > 0 && item.productQtySlab > 0">Buy {{item.productQtySlab}} @ ${{item.productPriceSlab | number:'1.2-2'}}</div>
               </div>
               <div style="width: 40%; margin-left: 5px;">
-                <p class="product-price">${{item.productPrice | number:'1.2-2'}}</p>
+                <p class="product-price">${{item.bulkPrice | number:'1.2-2'}}</p>
                 <ion-select placeholder={{item.placeholder_qty}} interface="popover" mode="ios" [interfaceOptions]="{'cssClass': 'price-popover'}" (ionChange)="changePrice($event, productIndex)">
                   <ion-select-option *ngFor="let qty of item.qty_dropdownList" [value]="qty">{{qty}}</ion-select-option>
                 </ion-select>  
