--- a/src/app/pages/clearance/clearance.page.scss
+++ b/src/app/pages/clearance/clearance.page.scss
@@ -27,29 +27,12 @@ p {
     overflow: hidden;
     text-overflow: ellipsis;
 }
-.product-image{
-    background-size: cover;
-    background-position: center;
-    height: 150px;
-}
-
-.product-name{
-    font-weight: bold;
-    font-size: 20px;
-}
-.product-price{
-    text-align: right;
-    font-weight:700;
-    font-size: 18px;
-}
-.product-info-div{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-}
-.product-info-space{
-    margin-top: 10px;
+.ribbon-img{
+    width: 60px; 
+    height: 60px; 
+    position: absolute; 
+    top: 0; 
+    right: 0;
 }
 .button-login{
     height: 50px;
@@ -63,25 +46,4 @@ p {
     // --border-color : white;
     // --border-style: solid;
     // --border-width: 1px;
-}
-.loadmore-btn{
-    width: 30%;
-    height: 50px;
-    margin: auto !important;
-    font-size: 14px;
-    font-weight: bold !important;
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
-    text-transform: uppercase !important;
-   --color: white;
-    --color-activated: white;
-    --background-activated : #e76b6b;
-}
-.bulk-div{
-    margin-top: 5px;
-    text-align: center;
-    border: 1px dashed #de8913;
-    font-weight: 600;
-    border-radius: 2px;
-    background-color: #f0f391;
 }
