--- a/src/app/pages/new-arrival/new-arrival.page.html
+++ b/src/app/pages/new-arrival/new-arrival.page.html
@@ -30,7 +30,7 @@
             [ngStyle]="{'background-image':'url('+ img_dir + item.image[0].name +')'}"
             (click)="gotoDetail(item)">
               <img *ngIf="item.productPreOrder != 1" src="../assets/imgs/new.png" class="ribbon-img" />
-              <img *ngIf="item.productPreOrder == 1" src="../assets/imgs/preorder.png" class="ribbon-preorderimg" />
+              <img *ngIf="item.productPreOrder == 1" src="../assets/imgs/preorder.png" class="ribbon-img" />
             </div>   
           </div>
        
@@ -41,24 +41,11 @@
                 [ngStyle]="{'background-image':'url('+ img_dir + productImage.name +')'}"
                 (click)="gotoDetail(item)">
                 <img *ngIf="item.productPreOrder != 1" src="../assets/imgs/new.png" class="ribbon-img" />
-                <img *ngIf="item.productPreOrder == 1" src="../assets/imgs/preorder.png" class="ribbon-preorderimg" />
+                <img *ngIf="item.productPreOrder == 1" src="../assets/imgs/preorder.png" class="ribbon-img" />
   
             </div>
             </ion-slide>
           </ion-slides>
-
-
-          <!-- <div class="ribbon-bar-div" *ngIf="item.productPreOrder != 1">
-            <div class="ribbon-bar new-ribbon">
-              <span style="padding: 5px 5px 5px 5px">NEW</span>
-            </div>
-          </div>
-          <div class="ribbon-bar-div" *ngIf="item.productPreOrder == 1">
-            <div class="ribbon-bar preorder-ribbon">
-              <span style="padding: 5px 5px 5px 5px">PRE ORDER</span>
-            </div>
-          </div> -->
-
           <ion-card-content>
             <p><span class="product-name">{{item.productName}}</span></p>
             <div class="product-info-div">
@@ -69,7 +56,7 @@
                   class="bulk-div"
                   *ngIf="item.productPriceSlab > 0 && item.productQtySlab > 0"
                 >
-                  Buy {{item.productQtySlab}} @ ${{item.productPriceSlab}}
+                  Buy {{item.productQtySlab}} @ ${{item.productPriceSlab | number:'1.2-2'}}
                 </div>
               </div>
               <div style="width: 40%; margin-left: 5px">
