--- a/src/app/pages/clearance/clearance.page.html
+++ b/src/app/pages/clearance/clearance.page.html
@@ -1,16 +1,16 @@
 <ion-header mode="ios">
-  <ion-toolbar style="height: 80px; align-items: center; justify-content: center; display: flex;">
-    <ion-title>Clearance Products</ion-title>
-    <ion-buttons slot="end">
-      <ion-button (click)="openMenu()" slot="start">
-        <ion-icon name="menu" style="font-size: 38px;"></ion-icon>
-      </ion-button>
-    </ion-buttons>
-  </ion-toolbar>
-  
+  <app-header
+    [pageTitle]="pageTitle"
+    [cartBadgeCount]="cartBadgeCount"
+    [isLoggedIn]="true"
+  >
+  </app-header>
 </ion-header>
 
 <ion-content>
+  <div *ngIf="isLoading" class="loading-div">
+    <ion-spinner name="bubbles"></ion-spinner>
+  </div>
   <ion-grid *ngIf="!isLogined" class="ion-padding">
     <ion-row class="ion-justify-content-center ion-align-items-center">
       <ion-col size="12" class="ion-text-center">
@@ -18,7 +18,7 @@
       </ion-col>
     </ion-row>
   </ion-grid>
-  <ion-grid *ngIf="img_dir != '' && isLogined">
+  <ion-grid *ngIf="img_dir != '' && isLogined && !isLoading">
     <ion-row>
       <ion-col *ngFor="let item of productList; let productIndex = index" size="4">
         <ion-card>
@@ -62,7 +62,7 @@
             </div>
 
           </ion-card-content>
-          <ion-button  class="button-login" mode="ios" fill="solid" expand="full">
+          <ion-button  class="button-login" mode="ios" fill="solid" expand="full" (click)="addToCart(item)">
             Add To Cart
           </ion-button>
         </ion-card>
