--- a/src/app/pages/clearance/clearance.page.html
+++ b/src/app/pages/clearance/clearance.page.html
@@ -29,19 +29,24 @@
             <div class="product-image"
             [ngStyle]="{'background-image':'url('+ img_dir + item.image[0].name +')'}"
             (click)="gotoDetail(item)">
-              <img src="../assets/imgs/sale.png" class="ribbon-img" />
+              <img *ngIf="item.ribbonStatus == 'new'" src="../assets/imgs/new.png" class="ribbon-img" />
+              <img *ngIf="item.ribbonStatus == 'sale'" src="../assets/imgs/sale.png" class="ribbon-img" />
+              <img *ngIf="item.ribbonStatus == 'pre_order'" src="../assets/imgs/preorder.png" class="ribbon-img" />
+
             </div>   
           </div>
-       
           <ion-slides pager="true" [options]="slideOpts" mode="ios" *ngIf="item.image.length > 1">
             <ion-slide *ngFor="let productImage of item.image; let i = index">
               <div
                 class="product-image"
                 [ngStyle]="{'background-image':'url('+ img_dir + productImage.name +')'}"
                 (click)="gotoDetail(item)">
-                <img src="../assets/imgs/sale.png" class="ribbon-img" />
- 
-            </div>
+                <div *ngIf="i == 0">
+                  <img *ngIf="item.ribbonStatus == 'new'" src="../assets/imgs/new.png" class="ribbon-img" />
+                  <img *ngIf="item.ribbonStatus == 'sale'" src="../assets/imgs/sale.png" class="ribbon-img" />
+                  <img *ngIf="item.ribbonStatus == 'pre_order'" src="../assets/imgs/preorder.png" class="ribbon-img" />
+                </div>
+              </div>
             </ion-slide>
           </ion-slides>
 
