--- a/src/app/pages/special/special.page.scss
+++ b/src/app/pages/special/special.page.scss
@@ -78,3 +78,10 @@ p {
     border-radius: 2px;
     background-color: #f0f391;
 }
+.ribbon-img{
+    width: 60px; 
+    height: 60px; 
+    position: absolute; 
+    top: 0; 
+    right: 0;
+}
