--- a/src/app/pages/cart/cart.page.scss
+++ b/src/app/pages/cart/cart.page.scss
@@ -91,4 +91,7 @@ p{
     --border-color : white;
     --border-style: solid;
     --border-width: 1px;
+    ion-icon{
+        font-size: 1.0em;
+    }
 }
