--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -313,11 +313,20 @@
   background-color: #f0f391;
 }
 
-.product-image{
-  background-size: cover;
-  background-position: center;
+.product-image-div{
   width: 100%;
-  height: 120px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+
+}
+.product-image{
+  //border: 1px dashed #f50909;
+  width: 150px;
+  height: 150px;
+
 }
 .product-name{
   font-weight: bold;
