--- a/src/app/pages/clearance/clearance.page.html
+++ b/src/app/pages/clearance/clearance.page.html
@@ -26,9 +26,9 @@
           </div> -->
 
           <div *ngIf="item.image.length == 1" >
-            <div class="product-image"
-            [ngStyle]="{'background-image':'url('+ img_dir + item.image[0].name +')'}"
+            <div class="product-image-div"
             (click)="gotoDetail(item)">
+               <ion-img  [src]="img_dir + item.image[0].name" class="product-image"></ion-img>
               <img *ngIf="item.ribbonStatus == 'new'" src="../assets/imgs/new.png" class="ribbon-img" />
               <img *ngIf="item.ribbonStatus == 'sale'" src="../assets/imgs/sale.png" class="ribbon-img" />
               <img *ngIf="item.ribbonStatus == 'pre_order'" src="../assets/imgs/preorder.png" class="ribbon-img" />
@@ -38,9 +38,9 @@
           <ion-slides pager="true" [options]="slideOpts" mode="ios" *ngIf="item.image.length > 1">
             <ion-slide *ngFor="let productImage of item.image; let i = index">
               <div
-                class="product-image"
-                [ngStyle]="{'background-image':'url('+ img_dir + productImage.name +')'}"
+                class="product-image-div"
                 (click)="gotoDetail(item)">
+                <ion-img  [src]="img_dir + item.image[0].name" class="product-image"></ion-img>
                 <div *ngIf="i == 0">
                   <img *ngIf="item.ribbonStatus == 'new'" src="../assets/imgs/new.png" class="ribbon-img" />
                   <img *ngIf="item.ribbonStatus == 'sale'" src="../assets/imgs/sale.png" class="ribbon-img" />
