--- a/src/app/pages/shipping-address/shipping-address.page.html
+++ b/src/app/pages/shipping-address/shipping-address.page.html
@@ -143,7 +143,7 @@
     </ion-row>              
   </ion-grid>
   <div class="button-div">
-    <ion-button  class="button-proceed" mode="ios" fill="solid"  expand="block"  [disabled]="!validationsform.valid">
+    <ion-button  class="button-proceed" type="submit" mode="ios" fill="solid"  expand="block"  [disabled]="!validationsform.valid">
       Proceed to payment method&nbsp;&nbsp;<ion-icon name="arrow-forward-outline"></ion-icon>
     </ion-button>
   </div>
