--- a/src/app/pages/payment/payment.page.html
+++ b/src/app/pages/payment/payment.page.html
@@ -113,7 +113,10 @@
         </ion-col>
       </ion-row>              
     </ion-grid>
-    <div class="button-div" *ngIf="isShowForm">
+    <div class="button-div" >
+      <ion-button  class="button-proceed"  mode="ios" fill="solid"  expand="block"  (click)="back()">
+        <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;&nbsp;Shipping details
+      </ion-button>      
       <ion-button  class="button-proceed" type="submit" mode="ios" fill="solid"  expand="block"  [disabled]="!validationsform.valid">
         Finalise Order&nbsp;&nbsp;<ion-icon name="arrow-forward-outline"></ion-icon>
       </ion-button>
