--- a/src/app/pages/shipping-address/shipping-address.page.html
+++ b/src/app/pages/shipping-address/shipping-address.page.html
@@ -10,23 +10,30 @@
   </ion-toolbar>
 </ion-header>
 <ion-content class="ion-padding">
-  <form class="form" [formGroup]="validationsform" (ngSubmit)="gotoPayment(validationsform.value)">
-  <ion-grid>
-    <ion-row class="ion-justify-content-center ion-align-items-center">
-      <ion-col>
-        <ion-list class="line-input" mode="md"> 
-          <ion-label>
-            <h2>Order Comments & Special instructions</h2>
-            <p>Do you have anything you need to tell us about this order?</p>
-          </ion-label>
+  <ion-row>
+    <ion-col>
+      <ion-list class="line-input" mode="md"> 
+        <ion-label>
+          <h2>Order Comments & Special instructions</h2>
+          <p>Do you have anything you need to tell us about this order?</p>
+        </ion-label>
+        <ion-item mode="md" lines="none"  style="margin-top: 10px;">
+          <ion-textarea rows="6" cols="20" placeholder="Enter any notes here..."></ion-textarea>
+        </ion-item> 
+      </ion-list>  
+    </ion-col>
+  </ion-row>
+  <ion-item lines="none">
+    <fa-icon icon="clipboard-check" class="clipboardIcon"></fa-icon>
+    <p style="font-weight: bold;">You can submit this form and our office will contact you for payment details.</p>
+  </ion-item>
+  <ion-item>
+    <ion-label>My billing address is the same as my delivery address.</ion-label>
+    <ion-checkbox color="primary" checked slot="start" mode="md" style="margin-right: 10px; margin-left: 10px;" (ionChange)="onCheckboxChange($event)"></ion-checkbox>
+  </ion-item>
 
-          <ion-item mode="md" lines="none"  style="margin-top: 10px;">
-            <ion-textarea rows="6" cols="20" placeholder="Enter any notes here..." formControlName="order_comment"></ion-textarea>
-          </ion-item> 
-          
-        </ion-list>  
-      </ion-col>
-    </ion-row>
+  <form class="form" [formGroup]="validationsform" (ngSubmit)="gotoPayment(validationsform.value)">
+  <ion-grid *ngIf="isShowForm">
     <ion-row class="ion-no-padding">
       <ion-col>
         <ion-list class="line-input" mode="md"> 
@@ -143,8 +150,12 @@
     </ion-row>              
   </ion-grid>
   <div class="button-div">
+    <ion-item lines="none">
+      <ion-label style="font-size: 14px;">I accepted the <a>terms & conditions</a> and if paying by credit, authorise payment for back ordered items.</ion-label>
+      <ion-checkbox color="dark" slot="start" mode="md" style="margin-right: 10px; margin-left: 10px;"></ion-checkbox>
+    </ion-item>   
     <ion-button  class="button-proceed" type="submit" mode="ios" fill="solid"  expand="block"  [disabled]="!validationsform.valid">
-      Proceed to payment method&nbsp;&nbsp;<ion-icon name="arrow-forward-outline"></ion-icon>
+      Submit this order for AU ${{totalAmount | number:'1.2-2'}}
     </ion-button>
   </div>
   </form>
