--- a/src/app/pages/savedorders/savedorders.page.html
+++ b/src/app/pages/savedorders/savedorders.page.html
@@ -8,21 +8,38 @@
 
 <ion-content>
   <ion-grid>
-    <ion-row class="ion-justify-content-center ion-align-items-center" *ngFor="let item of savedOrderList">
+    <ion-row class="ion-justify-content-center ion-align-items-center" *ngFor="let item of savedOrderList; let saveorderIndex = index">
       <ion-col size="11" class="ion-text-center">
         <ion-item >
           <ion-label> {{item.orderDate}}</ion-label>  
-          <ion-button slot="end" class="button-plus" (click)="getSavedOrderDetails(item)"><ion-icon name="add-outline" style="font-size: 32px;"></ion-icon></ion-button>        
+          <ion-button  *ngIf="item.expanded" slot="end" class="button-plus" (click)="getSavedOrderDetails(item, saveorderIndex)">
+            <ion-icon name="remove-outline" style="font-size: 32px;"></ion-icon>
+          </ion-button>       
+          <ion-button  *ngIf="!item.expanded" slot="end" class="button-plus" (click)="getSavedOrderDetails(item, saveorderIndex)">
+            <ion-icon name="add-outline" style="font-size: 32px;"></ion-icon>
+          </ion-button>             
         </ion-item>
-        <ion-item *ngFor="let details_Item of savedOrderDetails"> 
-          <ion-label>{{item.orderDate}}</ion-label>
-          <ion-label>
-            <h3>{{details_Item.productName}}</h3>
-            <p>Code: {{details_Item.productCode}}, Price: ${{details_Item.productPrice}}</p>
-          </ion-label>
-          <ion-label>{{item.productQty}}</ion-label>
-
-        </ion-item>
+        <app-expandable [expandHeight]="expandHeight" [expanded]="item.expanded">
+          <ion-grid class="ion-text-center">
+            <ion-row class="ion-padding  header-text">
+              <ion-col size="3">Date</ion-col>
+              <ion-col size="3">SKU</ion-col>
+              <ion-col size="4">Product Name</ion-col>
+              <ion-col size="2">Quantity</ion-col>
+            </ion-row>
+            <ion-row *ngFor="let details_Item of item.details" class="ion-padding">
+              <ion-col size="3">{{item.detail_orderdate }}</ion-col>
+              <ion-col size="3">{{details_Item.productCode}}</ion-col>
+              <ion-col size="4">{{details_Item.productName}}</ion-col>
+              <ion-col size="2">{{details_Item.productQty}}</ion-col>
+            </ion-row>
+          </ion-grid>
+          <div class="button-div">
+            <ion-button  class="button-merge" mode="ios" fill="solid"  expand="block" (click)="mergeOrder(item)">Merge Order</ion-button>
+            <ion-button  class="button-merge" mode="ios" fill="solid"  expand="block">Regenerate Order</ion-button>
+            <ion-button  class="button-delete" mode="ios" fill="solid"  expand="block">Delete Saved Order</ion-button>
+          </div>
+        </app-expandable>
       </ion-col>
     </ion-row>    
   </ion-grid>
