--- a/src/app/pages/savedorders/savedorders.page.html
+++ b/src/app/pages/savedorders/savedorders.page.html
@@ -36,7 +36,7 @@
           </ion-grid>
           <div class="button-div">
             <ion-button  class="button-merge" mode="ios" fill="solid"  expand="block" (click)="mergeOrder(item)">Merge Order</ion-button>
-            <ion-button  class="button-merge" mode="ios" fill="solid"  expand="block">Regenerate Order</ion-button>
+            <ion-button  class="button-merge" mode="ios" fill="solid"  expand="block" (click)="regenerateOrder(item)">Regenerate Order</ion-button>
             <ion-button  class="button-delete" mode="ios" fill="solid"  expand="block">Delete Saved Order</ion-button>
           </div>
         </app-expandable>
